--- a/site/index.html
+++ b/site/index.html
@@ -33,7 +33,7 @@
   <div id="Overview" class="tabcontent">
     <p>
       The Philter mod gives you a filter super-hopper that works with vanilla Minecraft or any mod.
-      Any kinds of items can be diverted into a different
+      Any kind of items can be diverted into a different
       output container. Otherwise, it just passes them along like any other hopper.
 
     <p>
@@ -124,9 +124,9 @@
       <table class="downloads" summary="downloads">
         <tr>
           <td onclick="window.location='philter-1.0.jar'">
-	      <div>
-	      <img src="logo_128.png" alt="philter"/> Download Philter
-	      </div>
+            <div>
+              <img src="logo_128.png" alt="philter"/> Download Philter
+            </div>
           </td>
         </tr>
       </table>
@@ -143,21 +143,21 @@
   </div>
 
   <!--CopyrightBegin -->
-<p class="license"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+  <p class="license"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
     <img align="right"
          alt="Creative Commons License"
          style="border-width:0"
          src="https://i.creativecommons.org/l/by/4.0/88x31.png"/></a>
     <span
-            xmlns:dct="http://purl.org/dc/terms/"
-            property="dct:title">Philter Mod for Minecraft</span> by <a
-            xmlns:cc="http://creativecommons.org/ns#" href="claritypack.com/philter" property="cc:attributionName"
-            rel="cc:attributionURL">claritypack.com/philter</a>
+        property="dct:title">Philter Mod for Minecraft</span> by <a
+        href="claritypack.com/philter" property="cc:attributionName"
+        rel="cc:attributionURL">claritypack.com/philter</a>
     <br>is licensed under a <a rel="license"
                                href="http://creativecommons.org/licenses/by/4.0/">Creative
-        Commons Attribution 4.0 International License</a>.
+      Commons Attribution 4.0 International License</a>.
     <br>© 2022-2023 by Ken Arnold. Based on a work at <a
-            xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/kcrca/philter" rel="dct:source">https://github.com/kcrca/philter</a>.
+        href="https://github.com/kcrca/philter"
+        rel="dct:source">https://github.com/kcrca/philter</a>.
     <!--CopyrightEnd-->
   <p class="timestamp">Page Last Edited: Jan 18 01:05:49 2023
 
@@ -191,6 +191,9 @@ if (!tab_name) {
 document.addEventListener("DOMContentLoaded", function(event) { 
     openTab(null, tab_name);
 });
+
+
+
 
 
 </script>
