update jar to 1.1

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="minecraft, game, mod, fiber">
 </head>
 
-<!-- version: 1.0 -->
+<!-- version: 1.1 -->
 
 <body>
 <div class="outer">
@@ -18,7 +18,7 @@
   <div class="heading">
     <h1>Philter</h1>
     <h3>A Filtering super-hopper</h3>
-    <i>Version 1.0</i>
+    <i>Version 1.1</i>
   </div>
 
   <div class="menu">
@@ -123,7 +123,7 @@
     <div class="menu">
       <table class="downloads" summary="downloads">
         <tr>
-          <td onclick="window.location='philter-1.0.jar'">
+          <td onclick="window.location='philter-1.1.jar'">
             <div>
               <img src="logo_128.png" alt="philter"/> Download Philter
             </div>
@@ -143,7 +143,7 @@
   </div>
 
   <!--CopyrightBegin -->
-  <p class="license"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+<p class="license"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
     <img align="right"
          alt="Creative Commons License"
          style="border-width:0"
@@ -154,12 +154,11 @@
         rel="cc:attributionURL">claritypack.com/philter</a>
     <br>is licensed under a <a rel="license"
                                href="http://creativecommons.org/licenses/by/4.0/">Creative
-      Commons Attribution 4.0 International License</a>.
+        Commons Attribution 4.0 International License</a>.
     <br>© 2022-2023 by Ken Arnold. Based on a work at <a
-        href="https://github.com/kcrca/philter"
-        rel="dct:source">https://github.com/kcrca/philter</a>.
+        href="https://github.com/kcrca/philter" rel="dct:source">https://github.com/kcrca/philter</a>.
     <!--CopyrightEnd-->
-  <p class="timestamp">Page Last Edited: Jan 18 01:05:49 2023
+  <p class="timestamp">Page Last Edited: Jan 18 01:57:02 2023
 
 </div>
 
