--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="minecraft, game, mod, fiber">
 </head>
 
-<!-- version: 1.2.2 -->
+<!-- version: 1.3 -->
 
 <body>
 <div class="outer">
@@ -18,7 +18,7 @@
     <div class="heading">
         <h1>Philter</h1>
         <h3>A Filtering super-hopper</h3>
-        <i>Version 1.2.2</i>
+        <i>Version 1.3</i>
     </div>
 
     <div class="menu">
@@ -46,6 +46,10 @@
             tab on the filter's top shows where normal items are directed. The redstone stripe flashes
             when an item
             is instead filtered to the hopper on the right.
+
+            This insert blocks the "pulling" from above. This means you can run filters horizontally or vertically
+            as you please without worrying about the filter pulling items down from the philter (or hopper or chest)
+            above. Which makes it very simple to create a sorter without using redstone to block that pulling.
 
         <p>
             You can set up the filter using its UI:
@@ -123,7 +127,7 @@
         <div class="menu">
             <table class="downloads" summary="downloads">
                 <tr>
-                    <td onclick="window.location='philter-1.2.2.jar'">
+                    <td onclick="window.location='philter-1.3.jar'">
                         <div>
                             <img src="logo_128.png" alt="philter"/> Download Philter
                         </div>
@@ -158,7 +162,7 @@
     <br>© 2022-2023 by Ken Arnold. Based on a work at <a
         href="https://github.com/kcrca/philter" rel="dct:source">https://github.com/kcrca/philter</a>.
         <!--CopyrightEnd-->
-    <p class="timestamp">Page Last Edited: Jan 31 16:19:23 2023
+    <p class="timestamp">Page Last Edited: Mar  4 15:32:47 2023
 
 </div>
 
