--- a/site/index.html
+++ b/site/index.html
@@ -69,7 +69,7 @@
 
         <p>
             You can set up the filter using its UI:
-            <img src="only_same_mode.png" alt="filter UI in 'Only Same' mode">
+            <img src="same_as.png" alt="filter UI in 'Only Same' mode">
 
         <p>
             The area in the upper left is the basic hopper UI, and works just the same. On the right is
@@ -178,7 +178,7 @@
     <br>© 2022-2023 by Ken Arnold. Based on a work at <a
         href="https://github.com/kcrca/philter" rel="dct:source">https://github.com/kcrca/philter</a>.
         <!--CopyrightEnd-->
-    <p class="timestamp">Page Last Edited: Mar  4 15:32:47 2023
+    <p class="timestamp">Page Last Edited: Mar  4 15:53:18 2023
 
 </div>
 
