--- a/site/index.html
+++ b/site/index.html
@@ -145,14 +145,14 @@
                 <tr>
                     <td onclick="window.location='philter-1.3.1+1.19.4.jar'">
                         <div>
-                            <img src="logo_128.png" alt="philter"/> Download Philter (1.19.4)
+                            <img src="logo_128.png" alt="philter"/> Download Philter 1.3.1 (1.19.4)
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td onclick="window.location='philter-1.3.1'">
                         <div>
-                            <img src="logo_128.png" alt="philter"/> Download Philter (1.19.3)
+                            <img src="logo_128.png" alt="philter"/> Download Philter 1.3.1 (1.19.3)
                         </div>
                     </td>
                 </tr>
