many html fixes

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <title>Philter filtering mod</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <meta name="description"
           content="Philter's filter gives you a super hopper that will filter certain items to a different place"/>
     <meta name="keywords" content="philter, filter">
@@ -22,7 +23,7 @@
     </div>
 
     <div class="menu">
-        <table summary="Site links">
+        <table role="presentation">
             <tr>
                 <td class="tablinks Overview" onclick="openTab(event, 'Overview')">Overview</td>
                 <td class="tablinks Downloads" onclick="openTab(event, 'Downloads')">Downloads</td>
@@ -141,7 +142,7 @@
     <div id="Downloads" class="tabcontent">
         <p>
         <div class="menu">
-            <table class="downloads" summary="downloads">
+            <table class="downloads" role="presentation">
                 <tr>
                     <td onclick="window.location='philter-1.3.1+1.20.1.jar'">
                         <div>
@@ -161,7 +162,7 @@
     </div>
 
     <div class="menu">
-        <table summary="Site links">
+        <table role="presentation">
             <tr>
                 <td class="tablinks Overview" onclick="openTab(event, 'Overview')">Overview</td>
                 <td class="tablinks Downloads" onclick="openTab(event, 'Downloads')">Downloads</td>
