update the license

--- a/site/index.html
+++ b/site/index.html
@@ -179,15 +179,14 @@
     <span
         property="dct:title">Philter Mod for Minecraft</span> by <a
         href="claritypack.com/philter" property="cc:attributionName"
-        rel="cc:attributionURL">claritypack.com/philter</a>
+        rel="cc:attributionURL">https://claritypack.com/philter</a>
     <br>is licensed under a <a rel="license"
                                href="http://creativecommons.org/licenses/by/4.0/">Creative
         Commons Attribution 4.0 International License</a>.
-    <br>© 2022-2023 by Ken Arnold. Based on a work at <a
+    <br>© 2022&ndash;2024 by Ken Arnold. Based on a work at <a
         href="https://github.com/kcrca/philter" rel="dct:source">https://github.com/kcrca/philter</a>.
         <!--CopyrightEnd-->
     <p class="timestamp">Page Last Edited: Mar 18 19:57:31 2023
-
 </div>
 
 <script>
